lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:11: error: value foreach is not a member of Range.Partial[Double,scala.collection.immutable.NumericRange[Double]]
		for (k<-i+1 to i+50) {
                            ^Lander:19: error: type mismatch;
 found   : Double
 required: Int
		if (estSolPlat(i)) {a=i;b=getSol()(i).y}
                                      ^Lander:19: error: type mismatch;
 found   : Double
 required: Int
		if (estSolPlat(i)) {a=i;b=getSol()(i).y}
                                                   ^Lander:18: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	while (a==0 && i<=1949) {
        ^